# uipath-mcp-python

./: .gitignore  README.md  SETUP.MD  mcp_server.py  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: ci.yml  integration_tests.yml  test.yml  trigger-docs-agent.yml  trigger-reviewer-agent.yml
.pipelines/: security-scans.yml
docs/: how_to_pack_binary.md  quick_start.md  sample.md
samples/financial-reconciliation-agent/: agent_graph.py  input.json  langgraph.json  local_tools.py  prompts.py  pyproject.toml
samples/financial-reconciliation-agent/mcp-internal/: mcp.json  pyproject.toml  server.py  uipath.json
samples/github-docs-agent/: .env.example  README.md  main.py  pyproject.toml  uipath.json
samples/github-helper-agent/: README.md  main.py  pyproject.toml
samples/github-reviewer-agent/: README.md  main.py  pyproject.toml  uipath.json
samples/github-slack-agent/: main.py  pyproject.toml
samples/mcp-datetime-server/: README.md  mcp.json  pyproject.toml  server.py
samples/mcp-dynamic-server/: pyproject.toml  server.py
samples/mcp-functions-agent/: builder.py  pyproject.toml
samples/mcp-functions-server/: pyproject.toml
samples/mcp-longrunning-server/: pyproject.toml  server.py
samples/mcp-math-server/: mcp.json  pyproject.toml
samples/mcp-sdk-server/: pyproject.toml
samples/mcp-server/: mcp.json
samples/mcp-string-server/: README.md  mcp.json  pyproject.toml  server.py
src/: pyproject.toml
src/uipath_mcp/: middlewares.py
src/uipath_mcp/_cli/: cli_init.py  cli_new.py  cli_run.py
testcases/datetime-server/: mcp.json  pyproject.toml  run.sh  server.py  test.py
testcases/ground-to-cloud/: run.sh  test.py
testcases/string-server/: mcp.json  pyproject.toml  run.sh  server.py  test.py
tests/: conftest.py  test_cli_new.py  test_config.py  test_context.py  test_exception.py  test_factory.py  test_middlewares.py  test_token_refresh.py  test_tracer.py  test_watchdog.py
tests/cli/: test_config.py  test_factory.py  test_runtime.py  test_runtime_more.py  test_session.py
uipath_mcp/: middlewares.py
(+15 files in other folders)
