[project]
name = "financial-reconciliation-agent"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Radu Mocanu" }]
dependencies = [
    "langgraph>=0.2.70",
    "langchain-core>=0.3.34",
    "langchain-anthropic>=0.3.9",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "python-dotenv>=1.0.1",
    "uipath-langchain==0.0.110",
    "pydantic>=2.10.6",
    "aiohttp>=3.11.12",
    "typing-extensions>=4.12.2",
    "langchain-mcp-adapters>=0.0.5",
    "ipython>=8.32.0",
    "mcp>=1.4.1",
    "langchain_mcp_adapters==0.0.9"
]

[tool.setuptools]
py-modules = []
